# mindrian

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fiex  fly.toml  package-lock.json  run-agent  run-backend  run-claude-agent  run-frontend
agent/: .env.example  .gitignore  document_agent.py  intelligent_agent.py  mckinsey_agent.py  mindrian_agent.py  pyproject.toml  testing.py
agent/agent_settings/: agent_settings.py
agent/db/: db.py
agent/larry/: complexity_assessor.py  definition_classifier.py  diagnosis_consolidator.py  larry_team.py  prompts.py  research_agent.py  risk_uncertainty_evaluator.py  wickedness_classifier.py
agent/tools/: __init__.py  documents.py  tavily_client.py  testing.py
agent/tools/larry/: prompts.py
backend/: .gitignore  AGENTS.md  README.md  mix.exs  pyproject.toml
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/: mindrian.ex  mindrian_web.ex
backend/test/: test_helper.exs
backend/tests/: load_tools_tests.py  loader_config_tests.py  test_context.py  test_latex_agent.py  test_loader_config.py  test_math_agent.py  tests.py  trigger_real_agents_tests.py  trigger_real_images_test.py  trigger_real_images_tests.py
claude_agent/: README.md  claude_agent_service.py  pyproject.toml
claude_agent/mcp_tools/: __init__.py  documents.py
docs/: blocknote-collaboration-plan.md  chat-panel-plan.md  design-document.md  setup-plan.md
docs/research/: agno-events.md  (+3 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
tools/: run-chat-test
(+581 files in other folders)
