[project]
name = "mindrian-claude-agent"
version = "0.1.0"
description = "Mindrian AI Agent powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.9",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
